[gd_scene load_steps=2 format=4]
[ext_resource path="res://scripts/card_table.gd" type="Script" id=1]

[node name="CardTable" type="Control"]
script = ExtResource("1")

[node name="DrawButton" type="Button" parent="."]
text = "Draw"
position = Vector2(20, 20)

[node name="HoldButton" type="Button" parent="."]
text = "Hold"
position = Vector2(120, 20)

[node name="ScoreLabel" type="Label" parent="."]
text = "Score: 0"
position = Vector2(220, 25)

[node name="CardsContainer" type="Node2D" parent="."]
position = Vector2(20, 80)

[node name="AceMenu" type="PopupMenu" parent="."]

[node name="StarMenu" type="PopupMenu" parent="."]
